# RisuFramework

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  tasks.json
include/core/graphics/: Graphics.h  Window.h
include/core/logic/: RisuProject.h
include/game/: Game.h
src/: Main.cpp
src/core/graphics/: Graphics.cpp  Window.cpp
src/core/logic/: RisuProject.cpp
src/game/: Game.cpp
